# Conway-s-game-of-life

./: .gitignore  CMakeLists.txt
src/: game-of-life.cpp  global.cpp  imgui-window.cpp  init.cpp  input.cpp  main.cpp  texture.cpp
src/header/: game-of-life.h  global.h  imgui-windows.h  init.h  input.h  textures.h
src/imgui/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp
